# basic-image-adjustment-tool

./: .gitignore  CMakeLists.txt  Makefile  README.md  fsd.prj  ser.prj  shit.prj  soem.prj  some.prj  xxx
src/: App.cpp
src/Constants/: adjustmentType.h
src/Controllers/: AdjustmentTypesConverter.cpp  ImageAdjustmentPanel.cpp  ImageAdjustmentsEvent.cpp  MainFrame.cpp
src/Interfaces/: AdjustmentData.h  AdjustmentTypesConverter.h  ImageAdjustmentPanel.h  ImageAdjustments.h  ImageAdjustmentsEvent.h  MainFrame.h  Subscriber.h
src/Utils/: DataController.h  ImageUtils.h  cv-wx-converter.h
